<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_terminal">

    <fragment
        android:id="@+id/navigation_terminal"
        android:name="com.example.emwaver10.ui.terminal.TerminalFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_terminal" />

    <fragment
        android:id="@+id/navigation_packetmode"
        android:name="com.example.emwaver10.ui.packetmode.PacketModeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_packet_mode" />

    <fragment
        android:id="@+id/navigation_flash"
        android:name="com.example.emwaver10.ui.flash.FlashFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_flash" />
</navigation>